@startuml

title __CONTROLEUR's Class Diagram__\n

  package controleur {
    class GererFichier {
        - fichierALire : String
        + GererFichier()
        + lire()
        + EcrireFichier()
    }
  }
  

  package controleur {
    class Jeu {
        - tour : int
        + Jeu()
        + getTour()
        + setTour()
        + getJ()
        + setJ()
        + tirerCarte()
        + Joue()
    }
  }
  

  package controleur {
    class Joueur {
        - pseudo : String
        + Joueur()
        + getPseudo()
        + setPseudo()
        + getScore()
    }
  }
  

  package controleur {
    class Outils {
        {static} ~ arrayCateg : String[]
        {static} ~ arrayValeur : String[]
        {static} + getRandomCateg()
        {static} + getRandomValeur()
    }
  }
  

  package controleur {
    class Score {
        - valeur : int
        + Score()
        + getValeur()
        + setValeur()
    }
  }
  

  Jeu o-- Joueur : j
  Joueur o-- Score : score


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
